--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,12 +13,32 @@
 
 body {
     /* background color */
-    /* background-color: var(--background-light); */
-    background: linear-gradient(to bottom, var(--background-light), var(--background-dark));
+    background-color: var(--background-light);
+    /* background: linear-gradient(to bottom,var(--background-light), var(--background-dark)); */
     height: 100vh;
-
+  
     /* font */
     font-family: "Text Me One", serif;
     font-weight: 400;
     font-style: normal;
+}
+  
+.landing {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    justify-items: center;
+    align-items: center;
+    padding: 10vw;
+}
+  
+.image-container {
+    width: 80%;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+}
+  
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
