--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@ body {
     grid-template-columns: 2fr 1fr 2fr;
     justify-items: center;
     align-items: center;
-    margin: 30px 10vw;
+    margin: 50px 10vw;
 }
   
 .image-container {
@@ -43,6 +43,19 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    animation: slideDown 1s ease-out;
+}
+
+/* landing page animation */
+@keyframes slideDown {
+    from {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 /* table styling */
