--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,3 +91,23 @@ td {
 td a {
     color: var(--background-dark);
 }
+
+/* footer styling */
+footer {
+    text-align: center;
+    background-color: var(--background-dark);
+    color: white;
+    position: relative;
+    bottom: 0;
+    width: 100vw;
+    line-height: 2;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
