feat(recipe): added recipe styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,6 +58,37 @@ body {
     }
 }
 
+/* recipe style */
+.recipe {
+    text-align: center;
+    margin-bottom: 60px;
+    color: var(--background-dark);
+}
+
+#generate-button {
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: var(--background-dark);
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+
+#recipe-container img {
+    width: 100%;
+    max-width: 50vw;
+    height: auto;
+    margin-bottom: 15px;
+}
+
+#recipe-container p {
+    text-align: left;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-top: 10px;
+    margin-bottom: 60px;
+}
+
 /* table styling */
 table {
     width: 80%;
